tests-system/rbt-signature-string-end-functions-3/output
endswith(c, "en"), warning "a should end with en", c
         ^ rbt-signature-string-end-functions-3/foo.rsl:9: error: expected expression of type Builtin_String, got Builtin_Integer instead
Processed 1 model and 0 requirement files and found 1 error
